# openem

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  test.ini
case-studies/: EDF-Activity-Recognition.md  check_inferred_states.py  check_inferred_states_config.yaml  plot_states.py  plot_states_config.yaml
case-studies/ar_dashboard/: ar_dashboard.html  ar_dashboard_data.ipynb  tator.min.css  utilities.js
case-studies/ar_sample_generation/: config.ini  extract_sample_ranges.py  launch_algo.py
config/: Dockerfile  Dockerfile.mako  Makefile  cpu.mako  inference.mako  lite2.docker  openem_cv2.docker  tensorflow-config.cmake  tf_config.txt
config/arm_packages/: Makefile
config/openem_pytorch/: Dockerfile
deploy/: CMakeLists.txt
deploy/bindings/: CMakeLists.txt  openem.i
deploy/include/: CMakeLists.txt  classify.h  count.h  detect.h  error_codes.h  find_ruler.h  image.h  model.h  util.h  video.h
deploy/include/detail/: model.h  util.h
deploy/src/: CMakeLists.txt  classify.cc  count.cc  detect.cc  find_ruler.cc  image.cc  model.cc  util.cc  video.cc
deploy_python/: requirements.txt  setup.py  tator_tracker.py  tator_tracker_graph.py
deploy_python/openem/: Classify.py  Count.py  Detect.py  FindRuler.py  __init__.py  image.py  models.py  optimizer.py  optomizer.py
deploy_python/openem/Detect/: RetinaNet.py  SSD.py  __init__.py
deploy_python/openem/tracking/: __init__.py  features.py  graph.py  graph_utils.py  weights.py
deploy_python/test/: ClassifyTest.py  CountTest.py  DetectionTest.py  FindRulerTest.py  RetinanetTest.py  __main__.py
deploy_python2/: requirements.txt  setup.py
deploy_python2/openem2/classifier/: __init__.py  cli.py  tator.py  thumbnail_classifier.py
doc/: CMakeLists.txt  FAQS.md  annotation.md  build.md  classification.rst  conf.py  data_collection.md  doxyfile  index.rst  legacy_tutorial.md  pipelines.rst  tracking.rst  training_environment.md  tutorial.md
doc/api/: deployment.rst
doc/doxy/: doxy.h  footer.html
examples/: CMakeLists.txt
examples/deploy/: CMakeLists.txt  run_all.py
examples/deploy/cc/: CMakeLists.txt  classify.cc  detect.cc  find_ruler.cc  video.cc
examples/deploy/csharp/: CMakeLists.txt  classify.cs  detect.cs  find_ruler.cs  util.cs  video.cs
examples/deploy/detect/: CMakeLists.txt  main.cc
examples/deploy/find_ruler/: CMakeLists.txt  main.cc
examples/deploy/python/: CMakeLists.txt  classify.py  detect.py  find_ruler.py  util.py  video.py
scripts/: applyMasks.py  ar_inference.py  ar_inference_2model.py  check_annotations.py  convertToOpenEM.py  convertToPb.py  csv_to_coco.py  detection_metrics.py  detectron2_inference.py  experimental_infer.py  feature_extractor.py  infer.py  iou_correlation_filter_tracker.py  lineToBox.py  make_classification_image.py  make_pipeline_image.py  make_pr_graph.py  mask_metrics.py  measure.py  periodic_capture.py  plot_states.py  plot_states_config.yaml  stats.py  stream_detect.py  tatorToCsv.py  tator_tracker.py  uploadToTator.py  upload_via_tator_py.py
scripts/analysis/: make_detection_pairs.py  make_tracklet_pairs.py  upload_pairs.py  upload_tracklet_pairs.py
scripts/jupyter/: population_analysis.ipynb  species_graph.ipynb
scripts/streamExamples/: broadcast_example.yaml  file_example.yaml  tator_example.yaml  tator_section_example.yaml
scripts/tator/: ar_inference_2model_entry.py  ar_inference_2model_workflow.yaml  ar_inference_entry.py  ar_inference_workflow.yaml  classification_workflow.yaml  detection_entry.py  detection_workflow.yaml  docker_entry.py  extend_track.yaml  feature_extraction_entry.py  feature_extraction_workflow.yaml  feature_extractor.py  fill_track_gaps.py  fill_track_gaps.yaml  iou_cf_tracker_entry.py  iou_cf_tracker_workflow.yaml  make_localization_summary.py  make_localization_summary_workflow.yaml  measure_entry.py  setup.py  stream_detection_example.yaml  teardown.py  tracker_entry.py  tracker_workflow.yaml  upload_detections_entry.py  visual_iou_tracker.py  visual_iou_tracker_entry.py  workflow.yaml
scripts/test/: __main__.py  infer.py
scripts/utils/: file_downloader.py  frame_reader.py
tator_applets/fill_track_gaps/: fill_track_gaps_applet.html  openem_fill_track_gaps.yaml  readme.md
tests/: checkBoxLogic.py  hostTrain.ini  tests.py
train/: preprocess.py  select_epoch.py  ssd.py  ssd_layers.py  train.ini  train.py  train_reidentification_cnn.py  train_retina.ini
train/openem_train/: classify.py  count.py  detect.py  find_ruler.py  preprocess.py  retinanet.py  test.py
train/openem_train/inception/: inception.py  inception_dataset.py
train/openem_train/rnn/: rnn.py  rnn_dataset.py
train/openem_train/ssd/: dataset.py  fish_detection.py  ssd.py  ssd_dataset.py  ssd_layers.py  ssd_training.py  ssd_utils.py
train/openem_train/unet/: unet.py  unet_dataset.py
train/openem_train/util/: config_interface.py  img_augmentation.py  model_utils.py  roi_transform.py  utils.py
train/siamese/: extract_reidentification_pairs.py  test_reidentification_cnn.py  train_reidentification_cnn.py
train/siamese/extractors/: __init__.py  appearance_feature_extractor.py  classification_feature_extractor.py  init_feature_extractor.py  motion_feature_extractor.py
train/siamese/providers/: __init__.py  classification_provider.py  count_provider.py  data_provider.py  sequence_provider.py  tracklet_provider.py
train/siamese/utilities/: __init__.py  class_data.py  count_data.py  detid_data.py  model_data.py  track_data.py  utilities.py
