find_package(SWIG REQUIRED)
find_package(PythonLibs REQUIRED)
include(UseSWIG)
include_directories(../include)
include_directories(${PYTHON_INCLUDE_DIRS})
set_source_files_properties(openem.i PROPERTIES CPLUSPLUS ON)
swig_add_library(openem TYPE MODULE LANGUAGE python SOURCES openem.i)
swig_link_libraries(openem tensorflow ${OPENCV_LIBS} ${PYTHON_LIBRARIES} openem)
install(TARGETS _openem DESTINATION modules)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/openem.py DESTINATION modules)
